src/styles/main.scss
@import "materialize";
@import "modules/purchase";

// PRIMARY STYLE 

*, *::after, *::before {
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-size: 100%;
  // font-size: 1.6rem;
  font-family: 'Avenir Next';
  color: #444444;
  background-color: #ffffff;
  margin: 0;
  padding: 0;
}

h1, h2, h3 {
  font-family: 'Lato';
}

h1.headline {
  font-size: 2.4em;
  text-align: center;
}

h3.subhead {
  font-size: 1em;
  text-align: center;
  color: #cdcdcd;
}

ul, ol {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.alert--message {
  margin: 2%;
  color: #cdcdcd;
  line-height: 19px;
}


// END PRIMARY STYLE 


// MATERIALIZE CSS OVERRIDES
.page--full.row {
  margin-bottom: 0;
}

.form--button.waves-effect.waves-light.btn-large {
  width: 160px;
  margin: 0 auto;
  border-radius: 35px;
  background-color: #9CBD3B;
  display: block;
  text-transform: none;
  font-weight: 900;
}

.hide {
  opacity: 0;
}

.spinner-layer.spinner-white {
  border-color: #fff;
}

.preloader-wrapper.smaller {
    width: 26px;
    height: 26px;
    margin-top: 15px;
}

@media #{$small-and-down} {
  #logo {
    width: 45px;
    height: 39px;
    @include background-image-retina('../images/Logo', png, 45px, 39px);
    background-repeat: no-repeat;
    display: block;
    margin: 6% auto 10%;
  }

  .page--full.row {
    padding-bottom: 20%;
  }

  .form--title {
    margin: 1% 0;
  }

  .form--input {
    max-width: 260px;
    margin: 0 auto 16%;
  }

  .input--help {
    margin-top: 5px;
  }

  h1.headline {
    font-size: 24px;
    margin: 0;
  }

  h3.subhead {
    font-size: 16px;
    margin-top: 2%;
    margin-bottom: 25%;
  }

  .alert--message {
    margin: 7%;
  }

}


@media #{$medium-and-up} {

  h1.headline, h3.subhead {
    margin: 3%;
  }

  .form--title {
    margin-top: 1%;
    margin-bottom: 75px;
  }

  .form--input {
    max-width: 500px;
    display: block;
    margin: 80px auto 40px;
    padding: 5%;
  }

  .inner--label {
    color: #979797; 
    font-size: 14px; 
    position: absolute; 
    right: 0; top: 8;
    text-transform: uppercase;
  }

  input#name, input#password {
    font-weight: 400;
    font-size: 1.4em;
    font-family: 'Avenir Next Medium';
  }

  .aside--testimonial {
    background-color: #7C6FFF;
    @include background-image-retina('../images/Mountain-illustration', png, 600px, 320px);
    background-position: bottom;
    background-size: contain;
    background-repeat: no-repeat;
    height: 100%;
    color: #fff;
  }



  .aside--testimonial-quote {
    margin: 30% 0;
    text-align: center;
    position: relative;
    z-index: 5;
  }

  .aside--testimonial-quote::after {
    content: '';
    @include background-image-retina('../images/confetti', png, 100%, 50%);
    height: 186px;
    width: 333px;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto auto;
    position: absolute;
    z-index: -1;
  }

  .aside--testimonial-quote > h2 {
    font-size: 1.6em;
    font-weight: 900;
    line-height: 29px; 
  }

  .aside--figure {
    position: absolute;
    right: -2%;  
    width: 80%;
  }


  #logo {
    width: 45px;
    height: 39px;
    @include background-image-retina('../images/Logo', png, 45px, 39px);
    background-repeat: no-repeat;
    display: block;
    position: absolute;
    top: 39px;
    left: 33px;
  }


  .input--help {
    display: block;
    margin-top: 2%;
    font-weight: 500;
    font-family: 'Avenir Next Medium';
    font-size: 16px;
  }

}

